# nsec-badge-display-other

./: .gitignore  README.md  README_old.md  TODO.md  reset_esp32_and_listen.py
esp32/: CMakeLists.txt  rebuild_and_flash.sh  sdkconfig  secure_reflash.sh
esp32/build-nsec/: secure_reflash.sh
esp32/components/cmd/: CMakeLists.txt  cmd_neopixel.cpp  console.cpp
esp32/components/display/: CMakeLists.txt  display.cpp  lv_utils.cpp  lv_utils.h
esp32/components/display/screens/: debug.cpp  debug.h  score_teams.c  score_teams.h  splash.cpp
esp32/components/display_ledc_backlight/: CMakeLists.txt  display_ledc_backlight.cpp  display_ledc_backlight.h  display_ledc_backlight1.cpp  display_ledc_backlight1.h
esp32/components/neopixel/: fastled_analog_controller.h  neopixel.cpp  neopixel.h
esp32/components/save/: save.cpp  save.h
esp32/extra-components/WS2812FX-idf/: FX.h
esp32/main/: main.cpp
medias/: demo.mkv  presentation.odp
simulation/: .gitignore  Makefile  README.md  lv_conf.h  main.c  setup_build.sh
simulation/lv_nsec_badge/: debug.h  lv_nsec_badge.mk  lv_utils.h
